cabal-version:       >=1.10

name:                hosts
version:             0.1.0.0
maintainer:          260708+forficate@users.noreply.github.com
build-type:          Simple


library hostparser
  exposed-modules:     HostParser
  hs-source-dirs:      lib/hostparser
  build-depends:       base       >= 4.12  && < 5
                     , megaparsec >= 8.0.0 && < 8.1
                     , text       >= 1.2.4 && < 1.3
                     , either     >= 5.0.1 && < 5.1
  default-language:    Haskell2010

executable hosts
  main-is:             Main.hs
  build-depends:       base                  >=4.12    && < 5
                     , bytestring            >= 0.10   && < 0.11
                     , conduit               >= 1.3    && < 1.4
                     , conduit-extra         >= 1.3    && < 1.4
                     , containers            >= 0.6    && < 0.7
                     , http-conduit          >= 2.3    && < 2.4
                     , mtl                   >= 2.2    && < 2.3
                     , optparse-applicative  >= 0.15   && < 0.16
                     , resourcet             >= 1.2    && < 1.3
                     , text                  >= 1.2.4  && < 1.3
                     , tomland               >= 1.3.1  && < 1.4
                     , unliftio              >= 0.2.13 && < 0.3
                     , hostparser
  default-language:    Haskell2010

